--- a/templates/auth/index.html
+++ b/templates/auth/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -8,7 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      background: url('/static/img/bg_login.png') no-repeat center center;
+      background: url("{% static 'img/bg_login.png' %}") no-repeat center center;
       background-size: cover;
       min-height: 100vh;
       display: flex;
